# vulnhunter

./: CONTRIBUTING.md  README.md  Usage  main.py  portscanner.py  pyproject.toml  requirements.txt  setup.cfg
.github/tests/: test_basic.py
.github/workflows/: ci.yml  pyproject.toml
core/: auth_bypass.py  csp_checker.py  portscanner.py  robots_txt_checker.py  ssl_http_security_audit.py  subdomain_enum.py  subdomain_enumeration.py  web_crawler.py  web_vuln_scanner.py
docs/: architecture.md
vulnhunter/: cli.py  config.py  logger.py
vulnhunter/discovery/: brute_dns.py  crtsh.py
vulnhunter/enrichment/: simple_enricher.py
vulnhunter/reporting/: reporter.py
vulnhunter/scanners/: nmap_wrapper.py  webscan.py  xss_dom_playwright.py
vulnhunter/scoring/: rules.py
wordlists/: subdomains.txt
